fixing minor bugs such as grid gaps

--- a/style.css
+++ b/style.css
@@ -73,7 +73,9 @@ form > #submit {
 main {
     padding: 1rem;
     display: grid;
-    grid-template-columns: repeat(auto-fill, 300px)
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fill, 300px);
+    grid-template-rows: repeat(auto-fit, 300px)
 }
 
 .card {
